[project]
name = "chat-api"
version = "0.1.0"
description = "character llm"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "na"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
